Skip burningwave initialization in JDK26 (#19)